--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.22.2",
     "vue": "^3.2.47"
   },
   "devDependencies": {
